# mag_patch

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: anmchr-commands.md  anmchr-triage.txt  registers-explanation.md  variables-wishlist.txt
src/: anmchr_commands.rs  binary_operators.rs  character_extensions.rs  character_tick.rs  error.rs  game_data.rs  hook_helpers.rs  input_parse.rs  lib.rs  match_state.rs  math.rs  reload.rs  storage.rs  strings.rs  tests.rs  unary_operators.rs  var_rw.rs
