[package]
name = "mag_patch"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
retour = "0.3.1"
windows = { version = "0.61.*", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]}

[lib]
crate-type = ["cdylib"]
